@@ -137,6 +137,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_ellipsization.o \
 	$(OBJS)\test_gui_measuring.o \
 	$(OBJS)\test_gui_affinematrix.o \
+	$(OBJS)\test_gui_boundingbox.o \
 	$(OBJS)\test_gui_config.o \
 	$(OBJS)\test_gui_bitmapcomboboxtest.o \
 	$(OBJS)\test_gui_bitmaptogglebuttontest.o \
@@ -765,6 +766,9 @@ $(OBJS)\test_gui_measuring.o: ./graphics/measuring.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_affinematrix.o: ./graphics/affinematrix.cpp
+	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\test_gui_boundingbox.o: ./graphics/boundingbox.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_config.o: ./config/config.cpp
