@@ -141,6 +141,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_ellipsization.obj \
 	$(OBJS)\test_gui_measuring.obj \
 	$(OBJS)\test_gui_affinematrix.obj \
+	$(OBJS)\test_gui_boundingbox.obj \
 	$(OBJS)\test_gui_config.obj \
 	$(OBJS)\test_gui_bitmapcomboboxtest.obj \
 	$(OBJS)\test_gui_bitmaptogglebuttontest.obj \
@@ -921,6 +922,9 @@ $(OBJS)\test_gui_measuring.obj: .\graphics\measuring.cpp
 
 $(OBJS)\test_gui_affinematrix.obj: .\graphics\affinematrix.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\graphics\affinematrix.cpp
+
+$(OBJS)\test_gui_boundingbox.obj: .\graphics\boundingbox.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\graphics\boundingbox.cpp
 
 $(OBJS)\test_gui_config.obj: .\config\config.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\config\config.cpp
